# ENPM690_hw3

./: .gitignore  PHASE1_中文操作手冊.md  PHASE2_Gazebo_Training_中文操作手冊.md  README.md  demo_metrics.md  phase2.md  pyproject.toml  report.md  run_demo.sh
code/enpm690_hw3_phase2/: geometry_utils.py
code/scripts/: generate_demo_artifacts.py
enpm690_hw3_phase1/: package.xml  setup.cfg  setup.py
enpm690_hw3_phase1/config/: bridge.yaml
enpm690_hw3_phase1/enpm690_hw3_phase1/: __init__.py  keyboard_teleop.py  odom_tf_broadcaster.py  teleop_command_logger.py
enpm690_hw3_phase1/launch/: bridge.launch.py  gazebo_world.launch.py  phase1_bringup.launch.py  rviz.launch.py  spawn_robot.launch.py  teleop_keyboard.launch.py
enpm690_hw3_phase1/models/turtlebot3_burger_like/: model.config  model.sdf
enpm690_hw3_phase1/resource/: enpm690_hw3_phase1
enpm690_hw3_phase1/rviz/: phase1.rviz
enpm690_hw3_phase1/urdf/: turtlebot3_burger_like.urdf
enpm690_hw3_phase1/worlds/: phase1_obstacles.sdf
enpm690_hw3_phase2/: LEGACY_NOTES.md  README_phase2.md  package.xml  setup.py
enpm690_hw3_phase2/config/: phase2_params.yaml  rl_params.yaml
enpm690_hw3_phase2/enpm690_hw3_phase2/: constants.py  eval_policy.py  fish_manager.py  game_core.py  game_manager.py  gazebo_entity_utils.py  gazebo_env.py  gazebo_fish_sync.py  gazebo_fish_utils.py  gazebo_pacman_sync.py  gym_env.py  logical_env.py  marker_publisher.py  matplotlib_pacman_sim.py  observation_builder.py  pacman_auto_controller.py  pacman_game_manager.py  pellet_manager.py  prey_behaviors.py  reward_builder.py  runtime_diagnostics.py  shark_auto_controller.py  shark_collision_monitor.py  spawn_utils.py  train_ppo.py
enpm690_hw3_phase2/launch/: phase2_demo.launch.py  phase2_eval.launch.py  phase2_play_auto.launch.py  phase2_play_teleop.launch.py  phase2_train.launch.py
enpm690_hw3_phase2/models/ghost_simple/: model.config
enpm690_hw3_phase2/models/sardine_simple/: model.config  model.sdf
enpm690_hw3_phase2/models/seaweed_simple/: model.config  model.sdf
enpm690_hw3_phase2/models/tuna_simple/: model.config  model.sdf
enpm690_hw3_phase2/rviz/: phase2.rviz  phase2_pacman.rviz
enpm690_hw3_phase2/worlds/: phase2_ocean_arena.sdf
scripts/: dev_env.sh  generate_submission_artifacts.py  regenerate_submission.sh
submission/: README.md  demo_metrics.md  report.md  run_demo.sh  teleop_input_log.txt
(+19 files in other folders)
