<?xml version="1.0"?>
<package format="3">
  <name>enpm690_hw3_phase2</name>
  <version>0.1.0</version>
  <description>Phase 2 shark hunt game, autonomous baseline, and RL environment for ENPM690 Homework 3.</description>
  <maintainer email="student@example.com">ENPM690 Student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>enpm690_hw3_phase1</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>rosgraph_msgs</depend>
  <depend>rviz2</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
